potential fix for overflow on phones

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 
 html, body, #root {
     height: 100%;
+    min-height: 100svh;
+    overflow-x: hidden;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
 }
